2015-02-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-search-name-anchor): Search for both "name" and
	(w3m-url-decode-string "name").  [emacs-w3m:12392]

2015-01-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-extra-numeric-character-reference):
	Use #x20 instead of ? .
	(w3m-scroll-up-1): Remove obsolete function alias to w3m-scroll-up.

2015-01-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-compile-file): New function.
	(w3mhack-compile): Use it.

2014-11-24  Andrey Kotlarski  <m00naticus@gmail.com>

	* w3m-lnum.el (w3m-lnum-actions-link-alist): Add open in background
	bindings.
	(w3m-lnum-remove-overlays): Enlarge default region to clean.
	(w3m-lnum-set-numbering): Use w3m-lnum-remove-overlays.
	(w3m-lnum-next-filter): New function.
	(w3m-lnum-read-interactive): Use it to search below and above when
	filter has no matches left.
	(w3m-with-lnum): Guarantee cleanup of right buffer.
	(w3m-lnum-get-action): Fix checkdoc warning.
	(w3m-lnum-visit): Make it function.  Enable visiting in background.
	(w3m-lnum-follow): Add prefix combinations to visit links in
	background.

2014-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-extra-numeric-character-reference): Add (?\C-m . ? ).
	[emacs-w3m:12378]

2014-10-01  Herbert J. Skuhra  <h.skuhra@gmail.com>

	* aclocal.m4 (AC_PATH_EMACS): Work for Emacs 25.

2014-08-01  Michael Heerdegen  <michael_heerdegen@web.de>
	Katsumi Yamaoka <yamaoka@jpl.org>

	* w3m.el (w3m-input-url-next-history-element): Abolish.
	(w3m-url-completion-map): Don't bind M-n key.
	(w3m-input-url-default-add-completions): New function.
	(w3m-input-url):
	Bind minibuffer-default-add-function to it locally in minibuffer.

2014-07-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-input-url-provide-initial-content): New user option.
	(w3m-input-url): Use it.
	(w3m-input-url-next-history-element): New function.
	(w3m-url-completion-map): Bind it.
	[emacs-w3m:12345]

2014-07-24  Katsumi Yamaoka  <yamaoka@jpl.org>
